# farmhash

./: .gitmodules  BeefProj.toml  BeefSpace.toml  CMakeLists.txt  build.bat  build.sh  build.ts  build_libs.bat
example/: BeefProj.toml
example/src/: Program.bf
libs/debug/: farmhash-c.lib
libs/release/: farmhash-c.lib
libs/windows/: farmhash.lib  farmhashd.lib
libs/windows/x64/: farmhash.lib  farmhash_d.lib
src/: farmhash.bf
